la till javascript

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ and open the template in the editor.
                     
                     <div class="collapse navbar-collapse" id="nav-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="dropdown">
-                                <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
+                            <li class="dropdown" >
+                                <a href="sidor/information/information.html" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Information<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu"id="bytenAvFärg">
                                     <li><a href="sidor/information/kvalité.html">Kvalité</a></li>
                                     <li><a href="sidor/information/garantier.html">Garantier</a></li>
                                     <li><a href="sidor/information/frakt.html">Frakt</a></li>
@@ -38,7 +38,7 @@ and open the template in the editor.
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="sidor/produkter/produkter.html" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
+                                <a href="sidor/produkter/produkter.html"  class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="">Pennor</a></li>
