--- a/sidor/information/frakt.html
+++ b/sidor/information/frakt.html
@@ -62,10 +62,20 @@ and open the template in the editor.
             <div class="jumbotron">
               <div class="container">
                   <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                  <h2 id="kategori">Frakt</h2>
               </div>
           </div>
         </header>
-        <div></div>
+         <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-3">
+                    <p>Frakter är idag en stor kostnad för många företag men våra specialavtal med olika fraktbolag erbjuds ni alltid kostnadsfria leveranser till dig som kund hos Nordoffice.</p>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <img id="bilder" src="../../bilder/transport.jpg" alt="shaking hands"/>
+                </div>
+            </div> 
+        </div>
         
        
          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
