--- a/sidor/produkter/produkter.html
+++ b/sidor/produkter/produkter.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="nav-collapse">
                         <ul class="nav navbar-nav">
                             <li class="dropdown">
-                                <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
+                                <a id="info" href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Information<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="">Kvalité</a></li>
