--- a/sidor/information/kvalité.html
+++ b/sidor/information/kvalité.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <nav class="navbar navbar-fixed-top navbar-default">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="" class="navbar-brand">Nordoffice</a>
+                        <a href="../../index.html" class="navbar-brand">Nordoffice</a>
                         <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
