--- a/sidor/produkter/mappar.html
+++ b/sidor/produkter/mappar.html
@@ -28,29 +28,29 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="nav-collapse">
                         <ul class="nav navbar-nav">
                             <li class="dropdown">
-                                <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
+                                <a id="info" href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Information<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="kvalité.html">Kvalité</a></li>
-                                    <li><a href="garantier.html">Garantier</a></li>
-                                    <li><a href="frakt.html">Frakt</a></li>
-                                    <li><a href="miljopolicy.html">Miljöpolicy</a></li>
+                                    <li><a href="../information/kvalité.html">Kvalité</a></li>
+                                    <li><a href="../information/garantier.html">Garantier</a></li>
+                                    <li><a href="../information/frakt.html">Frakt</a></li>
+                                    <li><a href="../information/miljopolicy.html">Miljöpolicy</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../sidor/produkter/pennor.html">Pennor</a></li>
-                                    <li><a href="../sidor/produkter/fickor.html">Fickor</a></li>
-                                    <li><a href="../sidor/produkter/mappar.html">Mappar</a></li>
-                                    <li><a href="../sidor/produkter/arkiv.html">Arkiv</a></li>
-                                    <li><a href="../sidor/produkter/Register.html">Register</a></li>
-                                    <li><a href="../sidor/produkter/självhäftande.html">Självhäftande</a></li>
-                                    <li><a href="../sidor/produkter/desktop.html">Desktop</a></li>
-                                    <li><a href="../sidor/produkter/datortillbehöer.html">Datortillbehör</a></li>
-                                    <li><a href="../sidor/produkter/ergonomi.html">Ergonomi</a></li>
-                                    <li><a href="../sidor/produkter/profilmaterial.html">Profilmaterial</a></li>
+                                    <li><a href="pennor.html">Pennor</a></li>
+                                    <li><a href="fickor.html">Fickor</a></li>
+                                    <li><a href="mappar.html">Mappar</a></li>
+                                    <li><a href="arkiv.html">Arkiv</a></li>
+                                    <li><a href="Register.html">Register</a></li>
+                                    <li><a href="självhäftande.html">Självhäftande</a></li>
+                                    <li><a href="desktop.html">Desktop</a></li>
+                                    <li><a href="datortillbehöer.html">Datortillbehör</a></li>
+                                    <li><a href="ergonomi.html">Ergonomi</a></li>
+                                    <li><a href="profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
                             <li><a href="">Arbeta hos oss</a></li>
@@ -62,7 +62,7 @@ and open the template in the editor.
             <div class="jumbotron">
                 <div class="container">
                     <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
-                    <h2 id="kategori">Garantier</h2>
+                    <h2 id="kategori">Mappar</h2>
                 </div>
             </div>
         </header>
@@ -70,11 +70,13 @@ and open the template in the editor.
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-3">
-                    <p>Du kan bara köpa våra produkter av en representant från Nordoffice. Viktigt för oss är trygghet och förtroende mellan säljaren och våra kunder. Nordoffice är idag en av få företag som jobbar med direktförsäljning där kunden bara har kontakt med en säljare oavsett vilka produkter kunden är intresserad av.</p>
-                    <h3>EN SÄLJARE - EN KUND</h3>
+                    <p>Vi erbjuder ett brett sortiment av datatillbehör.</p>
+                    <div class="col-lg-3 col-md-3">
+                        <img src="../../bilder/mappar3.jpg" alt="things for papers"/>
+                    </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <img id="bilder" src="../../bilder/garantier.jpg" alt="shaking hands"/>
+                <div class="col-lg-3 col-md-3">
+                    <img id="mappar" src="../../bilder/mappar5.jpg" alt="things for papers"/>
                 </div>
             </div> 
         </div>
