--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ and open the template in the editor.
                             <li class="dropdown" >
                                 <a href="sidor/information/information.html" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Information<span class="caret"></span></a>
-                                <ul class="dropdown-menu"id="bytenAvFärg">
+                                <ul class="dropdown-menu">
                                     <li><a href="sidor/information/kvalité.html">Kvalité</a></li>
                                     <li><a href="sidor/information/garantier.html">Garantier</a></li>
                                     <li><a href="sidor/information/frakt.html">Frakt</a></li>
@@ -41,16 +41,16 @@ and open the template in the editor.
                                 <a href="sidor/produkter/produkter.html"  class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Pennor</a></li>
-                                    <li><a href="">Fickor</a></li>
-                                    <li><a href="">Mappar</a></li>
-                                    <li><a href="">Arkiv</a></li>
-                                    <li><a href="">Register</a></li>
-                                    <li><a href="">Självhäftande</a></li>
-                                    <li><a href="">Desktop</a></li>
-                                    <li><a href="">Datortillbehör</a></li>
-                                    <li><a href="">Ergonomi</a></li>
-                                    <li><a href="">Profilmaterial</a></li>
+                                    <li><a href="sidor/produkter/pennor.html">Pennor</a></li>
+                                    <li><a href="sidor/produkter/fickor.html">Fickor</a></li>
+                                    <li><a href="sidor/produkter/mappar.html">Mappar</a></li>
+                                    <li><a href="sidor/produkter/arkiv.html">Arkiv</a></li>
+                                    <li><a href="sidor/produkter/Register.html">Register</a></li>
+                                    <li><a href="sidor/produkter/självhäftande.html">Självhäftande</a></li>
+                                    <li><a href="sidor/produkter/desktop.html">Desktop</a></li>
+                                    <li><a href="sidor/produkter/datortillbehöer.html">Datortillbehör</a></li>
+                                    <li><a href="sidor/produkter/ergonomi.html">Ergonomi</a></li>
+                                    <li><a href="sidor/produkter/profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
                             <li><a href="">Arbeta hos oss</a></li>
