--- a/sidor/produkter/produkter.html
+++ b/sidor/produkter/produkter.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <nav class="navbar navbar-fixed-top navbar-default">
                     <div class="container">
                         <div class="navbar-header">
-                            <a href="" class="navbar-brand">Nordoffice</a>
+                            <a href="../../index.html" class="navbar-brand">Nordoffice</a>
                             <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -41,16 +41,16 @@ and open the template in the editor.
                                 <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Pennor</a></li>
-                                    <li><a href="">Fickor</a></li>
-                                    <li><a href="">Mappar</a></li>
-                                    <li><a href="">Arkiv</a></li>
-                                    <li><a href="">Register</a></li>
-                                    <li><a href="">Självhäftande</a></li>
-                                    <li><a href="">Desktop</a></li>
-                                    <li><a href="">Datortillbehör</a></li>
-                                    <li><a href="">Ergonomi</a></li>
-                                    <li><a href="">Profilmaterial</a></li>
+                                    <li><a href="pennor.html">Pennor</a></li>
+                                    <li><a href="fickor.html">Fickor</a></li>
+                                    <li><a href="mappar.html">Mappar</a></li>
+                                    <li><a href="arkiv.html">Arkiv</a></li>
+                                    <li><a href="Register.html">Register</a></li>
+                                    <li><a href="självhäftande.html">Självhäftande</a></li>
+                                    <li><a href="desktop.html">Desktop</a></li>
+                                    <li><a href="datortillbehöer.html">Datortillbehör</a></li>
+                                    <li><a href="ergonomi.html">Ergonomi</a></li>
+                                    <li><a href="profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
                             <li><a href="">Arbeta hos oss</a></li>
@@ -62,6 +62,7 @@ and open the template in the editor.
             <div class="jumbotron">
               <div class="container">
                   <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                  <h2 id="kategori">Produkter</h2>
               </div>
           </div>
         </header>
