--- a/sidor/information/miljopolicy.html
+++ b/sidor/information/miljopolicy.html
@@ -41,20 +41,20 @@ and open the template in the editor.
                                 <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../sidor/produkter/pennor.html">Pennor</a></li>
-                                    <li><a href="../sidor/produkter/fickor.html">Fickor</a></li>
-                                    <li><a href="../sidor/produkter/mappar.html">Mappar</a></li>
-                                    <li><a href="../sidor/produkter/arkiv.html">Arkiv</a></li>
-                                    <li><a href="../sidor/produkter/Register.html">Register</a></li>
-                                    <li><a href="../sidor/produkter/självhäftande.html">Självhäftande</a></li>
-                                    <li><a href="../sidor/produkter/desktop.html">Desktop</a></li>
-                                    <li><a href="../sidor/produkter/datortillbehöer.html">Datortillbehör</a></li>
-                                    <li><a href="../sidor/produkter/ergonomi.html">Ergonomi</a></li>
-                                    <li><a href="../sidor/produkter/profilmaterial.html">Profilmaterial</a></li>
+                                    <li><a href="../produkter/pennor.html">Pennor</a></li>
+                                    <li><a href="../produkter/fickor.html">Fickor</a></li>
+                                    <li><a href="../produkter/mappar.html">Mappar</a></li>
+                                    <li><a href="../produkter/arkiv.html">Arkiv</a></li>
+                                    <li><a href="../produkter/Register.html">Register</a></li>
+                                    <li><a href="../produkter/självhäftande.html">Självhäftande</a></li>
+                                    <li><a href="../produkter/desktop.html">Desktop</a></li>
+                                    <li><a href="../produkter/datortillbehöer.html">Datortillbehör</a></li>
+                                    <li><a href="../produkter/ergonomi.html">Ergonomi</a></li>
+                                    <li><a href="../produkter/profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Arbeta hos oss</a></li>
-                            <li><a href="">Kontakta oss</a></li>
+                            <li><a href="../arbetaHosOss.html">Arbeta hos oss</a></li>
+                            <li><a href="../kontaktaOss.html">Kontakta oss</a></li>
                         </ul>
                     </div>
                 </div>
