--- a/sidor/produkter/ergonomi.html
+++ b/sidor/produkter/ergonomi.html
@@ -53,8 +53,8 @@ and open the template in the editor.
                                     <li><a href="profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Arbeta hos oss</a></li>
-                            <li><a href="">Kontakta oss</a></li>
+                            <li><a href="../arbetaHosOss.html">Arbeta hos oss</a></li>
+                            <li><a href="../kontaktaOss.html">Kontakta oss</a></li>
                         </ul>
                     </div>
                     </div>
