--- a/sidor/produkter/pennor.html
+++ b/sidor/produkter/pennor.html
@@ -53,8 +53,8 @@ and open the template in the editor.
                                     <li><a href="profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">Arbeta hos oss</a></li>
-                            <li><a href="">Kontakta oss</a></li>
+                            <li><a href="../arbetaHosOss.html">Arbeta hos oss</a></li>
+                            <li><a href="../kontaktaOss.html">Kontakta oss</a></li>
                         </ul>
                     </div>
                 </div>
@@ -81,7 +81,7 @@ and open the template in the editor.
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/whiteboard1.jpg" alt="register"/>
+                    <img src="../../bilder/whiteboard1.png" alt="register"/>
                 </div>
 
             </div> 
