ändrat bilderna så de är reponsiva

--- a/sidor/produkter/Register.html
+++ b/sidor/produkter/Register.html
@@ -69,11 +69,11 @@ and open the template in the editor.
         
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi erbjuder ett brett sortiment av register.</p>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/register.jpg" alt="register"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/register.jpg" alt="register"/>
                 </div>
             </div> 
         </div>
