--- a/sidor/produkter/mappar.html
+++ b/sidor/produkter/mappar.html
@@ -69,14 +69,14 @@ and open the template in the editor.
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi erbjuder ett brett sortiment av datatillbehör.</p>
-                    <div class="col-lg-3 col-md-3">
-                        <img src="../../bilder/mappar3.jpg" alt="things for papers"/>
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="img-responsive" src="../../bilder/mappar5.jpg" alt="things for papers"/>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img id="mappar" src="../../bilder/mappar5.jpg" alt="things for papers"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/mappar3.jpg" alt="things for papers"/>
                 </div>
             </div> 
         </div>
