--- a/sidor/produkter/pennor.html
+++ b/sidor/produkter/pennor.html
@@ -69,19 +69,19 @@ and open the template in the editor.
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <h2>Whiteboard pennor med refill</h2>
                     <p>Nordoffice marknadsför whiteboardpennor med ett refillsystem med färdigfyllda färgpatroner .
                         Whiteboard pennorna har ett alcobaserat pigment som ger en fyllig skrift och dessutom är väldigt lättraderad på tavlorna.
                         Du kan med fördel använda pennorna på både whiteboard och på blädderblock tack vare den hårda kiseltoppen.
                         Refill systemet som är enkelt att använda vilket gör produkten både blir ekonomiskt och miljövänligt.
                         Whitboardpennorna finns i 4 färger och säljs i askar,set eller konferansställ. </p>
-                    <div class="col-lg-3 col-md-3">
-                        <img src="../../bilder/whiteboard3.jpg" alt="whitebord pencil"/>
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="img-responsive" src="../../bilder/whiteboard3.jpg" alt="whitebord pencil"/>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/whiteboard1.png" alt="register"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/whiteboard1.png" alt="register"/>
                 </div>
 
             </div> 
