--- a/sidor/produkter/profilmaterial.html
+++ b/sidor/produkter/profilmaterial.html
@@ -68,11 +68,11 @@ and open the template in the editor.
         </header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi kan sätta erat varumärke på det flesta av våra produkter.<a href="kontaktaOss.html">Kontakta</a> vår representant för vidare info</p>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <img id="bilder" src="../../bilder/pennamedtryck.jpg" alt="pencil"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/pennamedtryck.jpg" alt="pencil"/>
                 </div>
             </div> 
         </div>
