--- a/sidor/produkter/Självhäftande.html
+++ b/sidor/produkter/Självhäftande.html
@@ -28,29 +28,29 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="nav-collapse">
                         <ul class="nav navbar-nav">
                             <li class="dropdown">
-                                <a id="info" href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
+                                <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Information<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../information/kvalité.html">Kvalité</a></li>
-                                    <li><a href="../information/garantier.html">Garantier</a></li>
-                                    <li><a href="../information/frakt.html">Frakt</a></li>
-                                    <li><a href="../information/miljopolicy.html">Miljöpolicy</a></li>
+                                    <li><a href="kvalité.html">Kvalité</a></li>
+                                    <li><a href="garantier.html">Garantier</a></li>
+                                    <li><a href="frakt.html">Frakt</a></li>
+                                    <li><a href="miljopolicy.html">Miljöpolicy</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
                                    aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="pennor.html">Pennor</a></li>
-                                    <li><a href="fickor.html">Fickor</a></li>
-                                    <li><a href="mappar.html">Mappar</a></li>
-                                    <li><a href="arkiv.html">Arkiv</a></li>
-                                    <li><a href="Register.html">Register</a></li>
-                                    <li><a href="självhäftande.html">Självhäftande</a></li>
-                                    <li><a href="desktop.html">Desktop</a></li>
-                                    <li><a href="datortillbehöer.html">Datortillbehör</a></li>
-                                    <li><a href="ergonomi.html">Ergonomi</a></li>
-                                    <li><a href="profilmaterial.html">Profilmaterial</a></li>
+                                    <li><a href="../produkter/pennor.html">Pennor</a></li>
+                                    <li><a href="../produkter/fickor.html">Fickor</a></li>
+                                    <li><a href="../produkter/mappar.html">Mappar</a></li>
+                                    <li><a href="../produkter/arkiv.html">Arkiv</a></li>
+                                    <li><a href="../produkter/Register.html">Register</a></li>
+                                    <li><a href="../produkter/självhäftande.html">Självhäftande</a></li>
+                                    <li><a href="../produkter/desktop.html">Desktop</a></li>
+                                    <li><a href="../produkter/datortillbehöer.html">Datortillbehör</a></li>
+                                    <li><a href="../produkter/ergonomi.html">Ergonomi</a></li>
+                                    <li><a href="../produkter/profilmaterial.html">Profilmaterial</a></li>
                                 </ul>
                             </li>
                             <li><a href="../arbetaHosOss.html">Arbeta hos oss</a></li>
@@ -66,13 +66,14 @@ and open the template in the editor.
                 </div>
             </div>
         </header>
+
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-3">
-                    <p>Vi erbjuder ett brett sortiment av självhäfftande produkter.</p>
+                <div class="col-lg-6 col-xs-12">
+                    <p>Vi erbjuder ett brett sortiment av självhäfftande produkter</p>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/sjalvhaft8.jpg" alt="sticky stuff"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/sjalvhaft8.jpg" alt="sticky stuff"/>
                 </div>
             </div> 
         </div>
