--- a/sidor/produkter/arkiv.html
+++ b/sidor/produkter/arkiv.html
@@ -69,14 +69,14 @@ and open the template in the editor.
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi marknadsför högkvalitativa arkivboxar i olika färger och utföranden.</p>
-                    <div class="col-lg-3 col-md-3">
-                        <img src="../../bilder/arkiv19.jpg" alt="produkts"/>
+                    <div class="col-lg-6 col-xs-12">
+                        <img class="img-responsive" src="../../bilder/arkiv19.jpg" alt="produkts"/>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/arkiv12.jpg" alt="produkts"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/arkiv12.jpg" alt="produkts"/>
                 </div>
             </div> 
         </div>
