--- a/sidor/produkter/datortillbehöer.html
+++ b/sidor/produkter/datortillbehöer.html
@@ -69,11 +69,11 @@ and open the template in the editor.
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi erbjuder ett brett sortiment av datatillbehör.</p>
                 </div>
-                <div class="col-lg-3     col-md-3">
-                    <img src="../../bilder/data_desktop9.jpg" alt="computer stuff"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/data_desktop9.jpg" alt="computer stuff"/>
                 </div>
             </div> 
         </div>
