--- a/sidor/produkter/desktop.html
+++ b/sidor/produkter/desktop.html
@@ -69,11 +69,11 @@ and open the template in the editor.
         
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi erbjuder ett brett sortiment av skrivbordsprodukter såsom infotape, notisar i olika storlekar m.m.</p>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/desktop1.jpg" alt="produkts"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/desktop1.jpg" alt="produkts"/>
                 </div>
             </div> 
         </div>
