--- a/sidor/produkter/fickor.html
+++ b/sidor/produkter/fickor.html
@@ -69,11 +69,11 @@ and open the template in the editor.
         
                 <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-3">
+                <div class="col-lg-6 col-xs-12">
                     <p>Vi erbjuder ett komplett sortiment av plastfickor.</p>
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <img src="../../bilder/fickor6.jpg" alt="produkts"/>
+                <div class="col-lg-6 col-xs-12">
+                    <img class="img-responsive" src="../../bilder/fickor6.jpg" alt="produkts"/>
                 </div>
             </div> 
         </div>
