--- a/sidor/produkter/profilmaterial.html
+++ b/sidor/produkter/profilmaterial.html
@@ -61,7 +61,7 @@ and open the template in the editor.
             </nav>
             <div class="jumbotron">
                 <div class="container">
-                    <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                    <h1><img class="img-responsive" src="../../bilder/nordofficeProv.png" alt="company logo"/></h1>
                     <h2 id="kategori">Profilmaterial</h2>
                 </div>
             </div>
@@ -69,7 +69,7 @@ and open the template in the editor.
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xs-12">
-                    <p>Vi kan sätta erat varumärke på det flesta av våra produkter.<a href="kontaktaOss.html">Kontakta</a> vår representant för vidare info</p>
+                    <p>Vi kan sätta erat varumärke på det flesta av våra produkter. <a href="../kontaktaOss.html">Kontakta</a> vår representant för vidare info</p>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <img class="img-responsive" src="../../bilder/pennamedtryck.jpg" alt="pencil"/>
