--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@ and open the template in the editor.
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="sidor/produkter/produkter.html"  class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true"
-                                   aria-expanded="false">Produkter<span class="caret"></span></a>
+                                <a href="sidor/produkter/produkter.html"  class="dropdown-toggle" data-toggle="dropdown" aria-haspopop="true" aria-expanded="false">Produkter<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="sidor/produkter/pennor.html">Pennor</a></li>
                                     <li><a href="sidor/produkter/fickor.html">Fickor</a></li>
@@ -55,12 +54,13 @@ and open the template in the editor.
                             </li>
                             <li><a href="sidor/arbetaHosOss.html">Arbeta hos oss</a></li>
                             <li><a href="sidor/kontaktaOss.html">Kontakta oss</a></li>
+                        </ul>
                     </div>
                 </div>
             </nav>
             <div class="jumbotron">
                 <div class="container">
-                    <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                    <img class="img-responsive" src="bilder/nordofficeProv.png" alt=""/>
                 </div>
             </div>
         </header>
