--- a/sidor/information/kvalité.html
+++ b/sidor/information/kvalité.html
@@ -61,7 +61,7 @@ and open the template in the editor.
             </nav>
             <div class="jumbotron" id="jumbotronPadding">
                 <div class="container">
-                    <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                    <h1><img class="img-responsive" src="../../bilder/nordofficeProv.png" alt="company logo"/></h1>
                     <h2 id="kategori">Kvalité</h2>
                 </div>
             </div>
