--- a/sidor/kontaktaOss.html
+++ b/sidor/kontaktaOss.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <nav class="navbar navbar-fixed-top navbar-default">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="../../index.html" class="navbar-brand">Nordoffice</a>
+                        <a href="../index.html" class="navbar-brand">Nordoffice</a>
                         <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,7 +61,7 @@ and open the template in the editor.
             </nav>
             <div class="jumbotron">
                 <div class="container">
-                    <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                    <h1><img class="img-responsive" src="../bilder/nordofficeProv.png" alt="company logo"/></h1>
                     <h2 id="kategori">Kontakta oss</h2>
                 </div>
             </div>
