--- a/sidor/produkter/ergonomi.html
+++ b/sidor/produkter/ergonomi.html
@@ -61,7 +61,7 @@ and open the template in the editor.
             </nav>
             <div class="jumbotron">
               <div class="container">
-                  <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                  <h1><img class="img-responsive" src="../../bilder/nordofficeProv.png" alt="company logo"/></h1>
                   <h2 id="kategori">Ergonomi</h2>
               </div>
           </div>
