--- a/sidor/produkter/pennor.html
+++ b/sidor/produkter/pennor.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html lang="sv">
     <head>
         <title>Nordoffice</title>
         <meta charset="UTF-8">
@@ -61,7 +61,7 @@ and open the template in the editor.
             </nav>
             <div class="jumbotron">
                 <div class="container">
-                    <h1>Nordoffice<small>- Idéer för kontoret</small></h1>
+                    <h1><img class="img-responsive" src="../../bilder/nordofficeProv.png" alt="company logo"/></h1>
                     <h2 id="kategori">Pennor</h2>
                 </div>
             </div>
