--- a/sidor/produkter/Självhäftande.html
+++ b/sidor/produkter/Självhäftande.html
@@ -61,7 +61,7 @@ and open the template in the editor.
             </nav>
             <div class="jumbotron">
                 <div class="container">
-                    <h1><img class="img-responsive" src="../../bilder/nordofficeProv.png" alt="company logo"/></h1>
+                    <h1><img class="img-responsive img-size" src="../../bilder/nordofficeProv.png" alt="company logo"/></h1>
                     <h2 id="kategori">Självhäftande</h2>
                 </div>
             </div>
